--- a/src/app/students/create-student/create-student.component.html
+++ b/src/app/students/create-student/create-student.component.html
@@ -48,8 +48,8 @@
             </form>
         </div>
         <div class="card-footer">
-            <button class="btn btn-sm btn-primary" (click)="addStudent()">Submit</button> &nbsp;
-            <!-- <button class="btn btn-sm btn-warning"  *ngIf="this.studId.id" (click)="updateStudent()">Update</button> -->
+            <button class="btn btn-sm btn-primary" (click)="addStudent()" *ngIf="!this.studId.id">Submit</button> &nbsp;
+            <button class="btn btn-sm btn-success"  *ngIf="this.studId.id" (click)="updateStudent()">Update</button>
         </div>
     </div>
 </div>
